Commit 3, home almost done

--- a/public/navbar.html
+++ b/public/navbar.html
@@ -14,7 +14,7 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li class="active" ng-click="showSearch = !showSearch"><a href="#/"> Search</a></li>
+              <li ng-click="showSearch = !showSearch"><a href="#/"> Search</a></li>
             </ul>
             <div ng-controller="NavbarController">
               <ul class="nav navbar-nav navbar-right" ng-hide="navbarLogged" >
