--- a/public/home.html
+++ b/public/home.html
@@ -1,23 +1,54 @@
 <div ng-include="'navbar.html'"></div>
 
+<!-- Alerts -->
+<div class="alert alert-danger" ng-show="showAlertError"> {{ showAlertError }}</div>
+<div class="alert alert-success" ng-show="showAlertSuccess">{{showAlertSuccess}}</div>
+
 <div class="container" ng-show="showSearch === true">
+  <!-- search -->
+</div>
 
 <!-- Real Estate Listings -->
 <div class="container">
-  <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="item in items | itemsFilter:priceInfo | orderBy: '-id'">
-	  <div class="thumbnail">
+  <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="item in items">
+    <div class="thumbnail">
       <img ng-src="img/{{item.image}}.jpg" alt="" >
       <div class="caption">
         <!-- Conditionally hiden -->
         <div ng-hide="showDetails === true">
-            <h4> {{item.title}}   </h4>
+          <h3><i class="glyphicon glyphicon-tag"></i> {{item.price | currency}}</h3>
+          <h4> {{item.title}} 
+              <span class="label label-primary label-sm">{{item.type}}</span>
+          </h4>
 
         </div>
 
-        <button class="btn btn-sm btn-success"
-                ng-hide="showDetails === true"
-                ng-click="showDetails = !showDetails">
-                Details
+        <button 
+          class="btn btn-sm btn-success"
+          ng-hide="showDetails === true"
+          ng-click="showDetails = !showDetails">
+          Details
+        </button>
+
+        <!-- Button to show owner -->
+        <button
+          class="btn btn-sm btn-warning"
+          ng-hide="showDetails === true || loggedIn === false"
+          ng-click="showOwner = !showOwner"
+          style="float: right">
+          Show the owner
+        </button>
+
+        <div class="listing-form-row" ng-hide="showOwner">
+          <label>Owner: <a href="mailto:{{item.owner}}">{{item.owner}}</a></label>
+        </div>
+
+
+        <button 
+          class="btn btn-sm btn-danger"
+          ng-show="showDetails === true"
+          ng-click="showDetails = !showDetails">
+          Close
         </button>
 
         <div class="details" ng-show="showDetails === true">
@@ -25,6 +56,6 @@
         </div>
 
       </div>
-	  </div>
+    </div>
   </div>
 </div>
