Commit 5, profile almost done, need upload photo

--- a/public/home.html
+++ b/public/home.html
@@ -55,6 +55,8 @@
             <p>{{item.description}}</p>
         </div>
 
+        <pre>{{item | json}}</pre>
+
       </div>
     </div>
   </div>
