Commit 6, search done in profile view

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title and favicon-->
-    <title>Showit</title>
+    <title>Item</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- to link arround we need to set a <base> in the <head> -->
