--- a/public/navbar.html
+++ b/public/navbar.html
@@ -14,7 +14,7 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li ng-click="showSearch = !showSearch"><a href="#/"> Search</a></li>
+              <li ng-click="showSearch = !showSearch"><a href="#"> Search</a></li>
             </ul>
             <div ng-controller="NavbarController">
               <ul class="nav navbar-nav navbar-right" ng-hide="navbarLogged" >
@@ -27,7 +27,7 @@
                   <span class="caret"></span></a>
                   <ul class="dropdown-menu" >
                     <li><a href="#/profile">My items</a></li>
-                    <li><a href="#/">Liked items</a></li>
+                    <li><a href="#/likeditems">Liked items</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="#/account">Account</a></li> 
                   </ul>
