--- a/public/profile.html
+++ b/public/profile.html
@@ -1,4 +1,4 @@
-<div ng-include="'navbar.html'" ng-controller="ProfileController"></div>
+<div ng-include="'navbar.html'"></div>
 
 <div class="container">
   <!-- Alerts -->
@@ -6,7 +6,7 @@
   <div class="alert alert-success" ng-show="showAlertSuccess">{{showAlertSuccess}}</div>
 </div>
 
-<div class="container" ng-show="showSearch === true">
+<div class="container">
   <!-- Min and Max Price Selection -->
   <div class="col-sm-12">
     <div class="col-sm-12">
