--- a/public/home.html
+++ b/public/home.html
@@ -6,13 +6,71 @@
   <div class="alert alert-success" ng-show="showAlertSuccess">{{showAlertSuccess}}</div>
 </div>
 
-<div class="container" ng-show="showSearch === true">
-  <!-- search -->
+<div class="container">
+  <!-- Min and Max Price Selection -->
+  <div class="col-sm-12">
+    <div class="col-sm-12">
+      <div class="row listing-form-row">
+        <div class="input-group ">
+          <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span>Search</span>
+          <input
+            type="text"
+            placeholder="Search an item"
+            class="form-control"
+            ng-model="searchItem">
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="listing-form-row price-form-row">
+        <div class="input-group">
+          <span class="input-group-addon">Min Price</span>
+          <select name="minPrice" id="minPrice" ng-model="priceInfo.min" class="form-control">
+            <option value="" disabled selected>Select a value</option>
+            <option value="0">0</option>
+            <option value="100">100</option>
+            <option value="200">200</option>
+            <option value="300">300</option>
+            <option value="400">400</option>
+            <option value="500">500</option>
+            <option value="600">600</option>
+            <option value="700">700</option>
+            <option value="800">800</option>
+            <option value="900">900</option>
+            <option value="1000">1000</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6">
+      <div class="listing-form-row price-form-row">
+        <div class="input-group">
+          <span class="input-group-addon">Max Price</span>
+          <select name="maxPrice" id="maxPrice" ng-model="priceInfo.max" class="form-control">
+            <option value="" disabled selected>Select a value</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+            <option value="200">200</option>
+            <option value="300">300</option>
+            <option value="400">400</option>
+            <option value="500">500</option>
+            <option value="600">600</option>
+            <option value="700">700</option>
+            <option value="800">800</option>
+            <option value="900">900</option>
+            <option value="1000">Above 1000</option>
+          </select>
+        </div>
+      </div>
+    </div>        
+  </div>
 </div>
+<hr>
 
 <!-- Real Estate Listings -->
 <div class="container">
-  <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="item in items | orderBy: '-_id'">
+  <div class="col-xs-12 col-sm-6 col-md-4" ng-repeat="item in items | itemsFilter:priceInfo | orderBy: '-_id' | filter:searchItem">
     <div class="thumbnail">
       <img ng-src="img/{{item.image}}.jpg" alt="" >
       <div class="caption">
