--- a/public/profile.html
+++ b/public/profile.html
@@ -306,11 +306,11 @@
           class="btn btn-sm btn-danger"
           ng-show="showDetails === true"
           ng-click="showDetails = !showDetails">
-          Close
+          Close details
         </button>
 
         <div class="details" ng-show="showDetails === true">
-          <p>{{item.description}}</p>
+          <p><h4>{{item.description}}</h4></p>
         </div>
 
       </div>
