--- a/public/likeditems.html
+++ b/public/likeditems.html
@@ -74,6 +74,10 @@
     <div class="thumbnail">
     <img ng-src="img/{{item.image}}.jpg" alt="" >
       <div class="caption">
+        <!-- email show -->
+        <div class="listing-form-row" >
+          <label>Owner: <a href="mailto:{{item.owner}}">{{item.owner}}</a></label>
+        </div>
         <!-- Conditionally hiden -->
         <div ng-hide="showDetails === true">
           <h3><i class="glyphicon glyphicon-tag"></i> {{item.price | currency}}</h3>
@@ -89,15 +93,22 @@
           Details
         </button>
 
+        <button 
+          class="btn btn-sm btn-danger"
+          ng-show="showDetails === true"
+          ng-click="showDetails = !showDetails">
+          Close details
+        </button>
+
         <!-- Button for edit -->
         <button
-          class="btn btn-sm btn-warning"
+          class="btn btn-sm btn-warning btn-like"
           ng-hide="showDetails === true"
           ng-click="editItem(item)"> Not Interested
         </button>
 
         <div class="details" ng-show="showDetails === true">
-          <p>{{item.description}}</p>
+          <p><h4>{{item.description}}</h4></p>
         </div>
 
       </div>
