--- a/public/navbar.html
+++ b/public/navbar.html
@@ -10,12 +10,10 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/"><img src="img/item_3.png" alt="Item"></a>
+            <a class="navbar-brand navbar-home-img" href="#/"><img src="img/item_3.png" alt="Item"></a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-              <li ng-click="showSearch = !showSearch"><a href="#/"> Search</a></li>
-            </ul>
+            
             <div>
               <ul class="nav navbar-nav navbar-right" ng-hide="navbarLogged" >
                 <li><a href="#/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
