--- a/public/navbar.html
+++ b/public/navbar.html
@@ -21,7 +21,7 @@
               </ul>
               <ul class="nav navbar-nav navbar-right" ng-show="navbarLogged">
                 <li class="dropdown">
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="#/">Hello {{ nav_user_name }}!
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="">Hello {{ nav_user_name }}!
                   <span class="caret"></span></a>
                   <ul class="dropdown-menu" >
                     <li><a href="#/profile">My items</a></li>
